# turtlebot3_autorace

./: .travis.yml  README.md
.github/workflows/: ros-ci.yml  ros-lint.yml
turtlebot3_autorace/: CHANGELOG.rst  CMakeLists.txt  package.xml  setup.cfg  setup.py
turtlebot3_autorace_2020/: CHANGELOG.rst  CMakeLists.txt  package.xml
turtlebot3_autorace_camera/: CHANGELOG.rst  CMakeLists.txt  package.xml  setup.cfg  setup.py
turtlebot3_autorace_camera/calibration/camera_calibration/: camera.yaml
turtlebot3_autorace_camera/calibration/extrinsic_calibration/: compensation.yaml  projection.yaml
turtlebot3_autorace_camera/calibration/intrinsic_calibration/: camerav2_320x240_30fps.yaml
turtlebot3_autorace_camera/cfg/: ImageCompensationParams.cfg  ImageProjectionParams.cfg
turtlebot3_autorace_camera/data/: ReadMe.md
turtlebot3_autorace_camera/launch/: extrinsic_camera_calibration.launch.py  intrinsic_camera_calibration.launch.py  turtlebot3_autorace_camera_pi.launch  turtlebot3_autorace_extrinsic_camera_calibration.launch  turtlebot3_autorace_intrinsic_camera_calibration.launch
turtlebot3_autorace_camera/nodes/: image_compensation  image_projection
turtlebot3_autorace_camera/src/: image_compensation.py  image_projection.py
turtlebot3_autorace_camera/turtlebot3_autorace_camera/: image_projection.py
turtlebot3_autorace_control/: CHANGELOG.rst  CMakeLists.txt  package.xml  setup.py
turtlebot3_autorace_control/launch/: turtlebot3_autorace_control_lane.launch  turtlebot3_autorace_control_parking.launch  turtlebot3_autorace_control_tunnel.launch
turtlebot3_autorace_control/maps/: tunnel.pgm  tunnel.yaml
turtlebot3_autorace_control/nodes/: control_lane  control_parking
turtlebot3_autorace_control/src/: control_lane.py  control_parking.py
turtlebot3_autorace_core/: CHANGELOG.rst  CMakeLists.txt  package.xml  setup.py
turtlebot3_autorace_core/launch/: turtlebot3_autorace_core.launch
turtlebot3_autorace_core/nodes/: core_mode_decider  core_node_controller  core_node_mission
turtlebot3_autorace_core/scripts/: core_mode_decider.py  core_node_controller.py
turtlebot3_autorace_core/src/: core_mode_decider.py  core_node_controller.py
turtlebot3_autorace_detect/: CHANGELOG.rst  CMakeLists.txt  package.xml  setup.cfg  setup.py
turtlebot3_autorace_detect/cfg/: DetectLaneParams.cfg  DetectLevelParams.cfg  DetectTrafficLightParams.cfg
turtlebot3_autorace_detect/launch/: detect_lane.launch.py  detect_level_crossing.launch.py  detect_sign.launch.py  detect_traffic_light.launch.py  object_detection.launch.py  turtlebot3_autorace_detect_lane.launch  turtlebot3_autorace_detect_level.launch  turtlebot3_autorace_detect_parking.launch  turtlebot3_autorace_detect_sign.launch  turtlebot3_autorace_detect_traffic_light.launch  turtlebot3_autorace_detect_tunnel.launch
turtlebot3_autorace_detect/nodes/: detect_lane  detect_level  detect_obstacle  detect_parking  detect_sign  detect_traffic_light  detect_tunnel
turtlebot3_autorace_detect/param/lane/: lane.yaml
turtlebot3_autorace_detect/param/level/: level.yaml
turtlebot3_autorace_detect/param/traffic_light/: traffic_light.yaml
turtlebot3_autorace_detect/scripts/: detect_lane.py  detect_level.py  detect_parking.py  detect_sign.py  detect_traffic_light.py
turtlebot3_autorace_detect/src/: detect_construction_sign.py  detect_intersection_sign.py  detect_lane.py  detect_level.py  detect_level_crossing.py  detect_level_crossing_sign.py  detect_parking_sign.py  detect_traffic_light.py  detect_tunnel.py  detect_tunnel_sign.py
turtlebot3_autorace_detect/turtlebot3_autorace_detect/: aruco_tracker.py  detect_construction_sign.py  detect_intersection_sign.py  detect_lane.py  detect_level_crossing.py  detect_level_crossing_sign.py  detect_parking_sign.py  detect_traffic_light.py  detect_tunnel_sign.py  object_detection.py
turtlebot3_autorace_mission/: CHANGELOG.rst  CMakeLists.txt  package.xml  setup.cfg  setup.py
turtlebot3_autorace_mission/config/: ros2_controllers.yaml  turtlebot3_arm.ros2_control.xacro  turtlebot3_arm.urdf.xacro
turtlebot3_autorace_mission/include/turtlebot3_autorace_mission/: alley_mission.hpp  door_docking.hpp  task_manager.hpp  undocking.hpp
turtlebot3_autorace_mission/launch/: arm_hardware.launch.py  autorace.launch.py  autorace_navigation.launch.py  control_lane.launch.py  localization_launch.py  mission_construction.launch.py  mission_tunnel.launch.py  navigation_launch.py
turtlebot3_autorace_mission/map/: map.pgm  map.yaml
turtlebot3_autorace_mission/param/: burger_navigation.yaml  navigation.yaml
turtlebot3_autorace_mission/src/: alley_mission.cpp  avoid_construction.py  control_lane.py  door_docking.cpp  mission_tunnel.py  task_manager.cpp  tracking_construction.py  undocking.cpp
turtlebot3_autorace_mission/turtlebot3_autorace_mission/: arm_controller.py  aruco_parking.py  avoid_construction.py  lidar_docking.py
turtlebot3_autorace_msgs/: CHANGELOG.rst  CMakeLists.txt  package.xml
turtlebot3_autorace_msgs/msg/: MovingParam.msg  Objects.msg  Tracker.msg
turtlebot3_autorace_msgs/srv/: DetectionResult.srv  UndockingTarget.srv
