<?xml version="1.0"?>
<package format="2">
  <name>turtlebot3_autorace_core</name>
  <version>1.0.0</version>
  <description> 
    The package for node control in TurtleBot3 Auto
  </description>
  <license>Apache 2.0</license>
  <author email="rwjung@robotis.com">Leon Jung</author>
  <maintainer email="pyo@robotis.com">Pyo</maintainer>
  <url type="website">http://wiki.ros.org/turtlebot3_autorace_core</url>
  <url type="emanual">http://emanual.robotis.com/docs/en/platform/turtlebot3/autonomous_driving/#autonomous-driving</url>
  <url type="repository">https://github.com/ROBOTIS-GIT/turtlebot3_autorace</url>
  <url type="bugtracker">https://github.com/ROBOTIS-GIT/turtlebot3_autorace/issues</url>
  <buildtool_depend>catkin</buildtool_depend>
  <depend>std_msgs</depend>
  <depend>sensor_msgs</depend>
  <exec_depend>rospy</exec_depend>
  <exec_depend>roslaunch</exec_depend>
  <exec_depend>cv_bridge</exec_depend>
  <exec_depend>opencv</exec_depend>
  <exec_depend>python-numpy</exec_depend>
  <exec_depend>python-enum</exec_depend>
</package>

