<?xml version="1.0"?>
<package format="2">
  <name>turtlebot3_autorace_detect</name>
  <version>1.0.0</version>
  <description>
    The package for feature detection with turtlebot3 auto
  </description>
  <license>Apache 2.0</license>
  <author email="rwjung@robotis.com">Leon Jung</author>
  <maintainer email="pyo@robotis.com">Pyo</maintainer>
  <url type="website">http://wiki.ros.org/turtlebot3_autorace_detect</url>
  <url type="emanual">http://emanual.robotis.com/docs/en/platform/turtlebot3/autonomous_driving/#autonomous-driving</url>
  <url type="repository">https://github.com/ROBOTIS-GIT/turtlebot3_autorace</url>
  <url type="bugtracker">https://github.com/ROBOTIS-GIT/turtlebot3_autorace/issues</url>
  <buildtool_depend>catkin</buildtool_depend>
  <depend>rospy</depend>
  <depend>std_msgs</depend>
  <depend>sensor_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>nav_msgs</depend>
  <depend>move_base_msgs</depend>
  <depend>tf</depend>
  <depend>dynamic_reconfigure</depend>
  <depend>cv_bridge</depend>
  <depend>opencv</depend>
  <exec_depend>python-numpy</exec_depend>
  <exec_depend>python-enum</exec_depend>
</package>

