<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>turtlebot3_autorace_mission</name>
  <version>1.2.2</version>
  <description>
    ROS 2 packages for turtlebot3_autorace_mission
  </description>
  <maintainer email="pyo@robotis.com">Pyo</maintainer>
  <license>Apache 2.0</license>
  <url type="website">http://turtlebot3.robotis.com</url>
  <url type="repository">https://github.com/ROBOTIS-GIT/turtlebot3_autorace</url>
  <url type="bugtracker">https://github.com/ROBOTIS-GIT/turtlebot3_autorace/issues</url>
  <author email="kkjong@robotis.com">Gilbert</author>
  <author>Leon Jung</author>
  <author email="kimhg@robotis.com">Hyungyu Kim</author>
  <author email="dddoggi1207@gmail.com">ChanHyeong Lee</author>
  <author email="junyeong4321@gmail.com">Jun</author>
  <depend>rclpy</depend>
  <depend>std_msgs</depend>
  <depend>sensor_msgs</depend>
  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
