<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>turtlebot3_autorace_msgs</name>
  <version>1.1.0</version>
  <description>The turtlebot3_autorace_msgs package</description>

  <!-- Maintainers -->
  <maintainer email="ashekim@robotis.com">Ashe Kim</maintainer>
  <maintainer email="willson@robotis.com">Will Son</maintainer>

  <license>Apache 2.0</license>

  <!-- URLs -->
  <url type="website">http://wiki.ros.org/turtlebot3_autorace</url>
  <url type="website">http://turtlebot3.robotis.com</url>
  <url type="repository">https://github.com/ROBOTIS-GIT/turtlebot3_autorace_2020</url>
  <url type="bugtracker">https://github.com/ROBOTIS-GIT/turtlebot3_autorace_2020/issues</url>

  <!-- Authors -->
  <author email="ashekim@robotis.com">Ashe Kim</author>

  <!-- Build Tool Dependence -->
  <buildtool_depend>ament_cmake</buildtool_depend>

  <!-- Dependencies -->
  <depend>std_msgs</depend>
  <depend>geometry_msgs</depend>

  <!-- Message Generation Dependencies -->
  <build_depend>rosidl_default_generators</build_depend>
  <exec_depend>rosidl_default_runtime</exec_depend>
  <member_of_group>rosidl_interface_packages</member_of_group>

  <!-- Export -->
  <export>
    <build_type>ament_cmake</build_type>
    <member_of_group>rosidl_interface_packages</member_of_group>
  </export>
</package>
